# AOC_2017

./: .gitignore  AoC.cabal  aoc.cabal
.devcontainer/: .ghci  Dockerfile
app/: template.hs
lib/: Utils.hs
src/: 03.hs  06.hs  15.hs  16.hs  17.hs  18.hs  19.hs  20.hs  21.hs  22.hs  23.hs  24.hs  25.hs
src/01/: Solution.hs
src/02/: Solution.hs
src/04/: Solution.hs
src/05/: Solution.hs
src/07/: Solution.hs
src/08/: Solution.hs
src/09/: Solution.hs
src/10/: Solution.hs
src/11/: Solution.hs
src/12/: Solution.hs
src/13/: Solution.hs
src/14/: Solution.hs
