cabal-version:      2.4
name:               aoc
version:            0.1.0.0
build-type:         Simple
author:             Paul Lim
maintainer:         hayashi.azi1mov@outlook.com
extra-source-files: CHANGELOG.md

common src
  hs-source-dirs: src

common flags
  default-language: Haskell2010

library
  hs-source-dirs:  lib
  build-depends:   base, directory
  exposed-modules: Utils

executable 01
  main-is:      src/01/Solution.hs
  import:       src, flags
  build-depends: base, aoc
