cabal-version:      2.4
name:               aoc
version:            0.1.0.0
build-type:         Simple
author:             Paul Lim
maintainer:         hayashi.azi1mov@outlook.com
extra-source-files: CHANGELOG.md

common src
  hs-source-dirs: src
  build-depends:
    base,
    aoc,
    text,
    containers,
    array,
    raw-strings-qq

common flags
  default-language: Haskell2010

library
  import:          flags
  hs-source-dirs:  lib
  build-depends:   base, directory, text, timeit
  exposed-modules: Utils

executable 01
  import:       src, flags
  main-is:      01/Solution.hs

executable 02
  import:       src, flags
  main-is:      02/Solution.hs

executable 03
  import:       src, flags
  main-is:      03/Solution.hs

executable 04
  import:       src, flags
  main-is:      04/Solution.hs

executable 05
  import:       src, flags
  main-is:      05/Solution.hs

executable 06
  import:       src, flags
  main-is:      06/Solution.hs

executable 07
  import:       src, flags
  main-is:      07/Solution.hs

executable 08
  import:       src, flags
  main-is:      08/Solution.hs
