cabal-version:      2.4
name:               aoc
version:            0.1.0.0
build-type:         Simple
author:             Paul Lim
maintainer:         hayashi.azi1mov@outlook.com
extra-source-files: CHANGELOG.md

common src
  hs-source-dirs: src
  build-depends:
    base,
    aoc,
    text,
    containers,
    array,
    transformers,
    raw-strings-qq,
    regex-tdfa

common flags
  default-language: Haskell2010
  default-extensions:
    TupleSections,
    LambdaCase,
    MultiWayIf,
    BlockArguments,
    TypeOperators,
    NumericUnderscores,
    OverloadedStrings,
    ViewPatterns,
    PatternSynonyms,
    ScopedTypeVariables,
    NamedFieldPuns,
    RecordWildCards,
    FlexibleInstances,
    FlexibleContexts,
    InstanceSigs,
    DataKinds,
    QuasiQuotes


library
  import:          flags
  hs-source-dirs:  lib
  build-depends:   base, directory, text, time, deepseq
  exposed-modules: Utils

executable 01
  import:       src, flags
  main-is:      01.hs

executable 02
  import:       src, flags
  main-is:      02.hs

executable 03
  import:       src, flags
  main-is:      03.hs

executable 04
  import:       src, flags
  main-is:      04.hs

executable 05
  import:       src, flags
  main-is:      05.hs

executable 06
  import:       src, flags
  main-is:      06.hs

executable 07
  import:       src, flags
  main-is:      07.hs

executable 08
  import:       src, flags
  main-is:      08.hs

executable 09
  import:       src, flags
  main-is:      09.hs

executable 10
  import:       src, flags
  main-is:      10.hs

executable 11
  import:       src, flags
  main-is:      11.hs

executable 12
  import:       src, flags
  main-is:      12.hs

executable 13
  import:       src, flags
  main-is:      13.hs

executable 14
  import:       src, flags
  main-is:      14.hs

executable 15
  import:       src, flags
  main-is:      15.hs

executable 16
  import:       src, flags
  main-is:      16.hs

executable 17
  import:       src, flags
  main-is:      17.hs

executable 18
  import:       src, flags
  main-is:      18.hs

executable 19
  import:       src, flags
  main-is:      19.hs

executable 20
  import:       src, flags
  main-is:      20.hs

executable 21
  import:       src, flags
  main-is:      21.hs

executable 22
  import:       src, flags
  main-is:      22.hs

executable 23
  import:       src, flags
  main-is:      23.hs

executable 24
  import:       src, flags
  main-is:      24.hs

executable 25
  import:       src, flags
  main-is:      25.hs


